--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
 </head>
 <body>
+<link rel="stylesheet" href="../build/css/index.css">
 <script type="text/javascript" src="../build/index.js"></script>
 
 <div class="title">
@@ -13,6 +14,7 @@
 <div class="test1"></div>
 
 <div class="test2"></div>
+
 
 </body>
 </html>
