--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <!--<title><%= htmlWebpackPlugin.options.title %></title>-->
+  <title>0218</title>
 </head>
 <body>
 
@@ -14,6 +15,8 @@
 
 <div class="test2"></div>
 
+<input type="text">
+<input type="text">
 
 </body>
 </html>
