--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,14 @@
 </div>
 
 <div class="test1"></div>
+<div class="test1"></div>
 
 <div class="test2"></div>
+<div class="test2"></div>
+
+<div>
+  <p>sdfkjhsdij</p>
+</div>
 
 <input type="text">
 <input type="text">
